# xray-16

./: .gitmodules  CMakeLists.txt
src/Common/: Platform.hpp  PlatformLinux.inl  object_loader.h
src/Layers/xrRender/: FSkinnedTypes.h  ParticleEffect.cpp  ResourceManager_Scripting.cpp  SH_Constant.h  ShaderResourceTraits.h  TextureDescrManager.cpp  dxFontRender.cpp  light.h  r__sector_traversal.cpp  r_sun_cascades.h
src/Layers/xrRenderDX10/: dx10ResourceManager_Scripting.cpp
src/Layers/xrRenderGL/: glHW.cpp  glHW.h  glHWCaps.cpp  glSH_Texture.cpp
src/Layers/xrRenderPC_GL/: CMakeLists.txt  glResourceManager_Scripting.cpp  r2_test_hw.cpp  stdafx.h
src/Layers/xrRenderPC_R1/: CMakeLists.txt  LightPPA.cpp
src/utils/xrAI/: xr_graph_merge.cpp
src/utils/xrDXT/dds/: tPixel.h
src/utils/xrLC/: OGF_Face_Save.cpp  xrMU_Model_export_OGF.cpp
src/utils/xrLC_Light/: xrDeflector.h  xrMU_Model_Reference_Calc_Lighting.cpp
src/xrCDB/: ISpatial.cpp  ISpatial.h
src/xrCore/: CMakeLists.txt  FS.cpp  FS.h  LocatorAPI.cpp  LocatorAPI_defs.h  ModuleLookup.cpp  _math.cpp  _sphere.h  file_stream_reader.cpp  stream_reader.cpp  stream_reader_inline.h  xrCore.cpp  xrDebug.cpp  xrDebug.h  xrMemory.cpp  xr_cpuid.cpp  xr_ini.cpp  xrstring.h
src/xrCore/Threading/: TaskManager.cpp  ThreadUtil.cpp
src/xrEngine/: CMakeLists.txt  CameraManager.cpp  Device_Initialize.cpp  Device_mode.cpp  FDemoPlay.cpp  device.h  line_edit_control.cpp  main.cpp  xrTheora_Stream.cpp  xr_efflensflare.cpp  xr_ioc_cmd.cpp
src/xrGame/: Actor.h  CMakeLists.txt  GamePersistent.cpp  GametaskManager.cpp  GametaskManager.h  Level.h  Level_input.cpp  Level_network.cpp  MainMenu.cpp  RegistryFuncs.cpp  configs_dumper.cpp  login_manager.cpp  screenshot_manager.cpp  screenshot_server.cpp  script_game_object.h  script_game_object_script3.cpp  stats_submitter.cpp  xrGame.vcxproj  xrGameSpyServer.cpp  xrServer.h
src/xrGame/ui/: UIPdaWnd.cpp
src/xrGameSpy/: CMakeLists.txt
src/xrNetServer/: NET_Messages.h
src/xrNetServer/empty/: NET_Client.cpp  NET_Server.cpp
src/xrScriptEngine/: script_engine.hpp
src/xrScriptEngine/LuaStudio/: Config.hpp
src/xrServerEntities/: ai_sounds.h
src/xrSound/: CMakeLists.txt  SoundRender_Core_Processor.cpp
src/xrUICore/: CMakeLists.txt
src/xr_3da/: CMakeLists.txt  entry_point.cpp  switch_bits.inl
